<resources>
    <string name="app_name">今天吃什么</string>
    <string name="shake_tips">摇一摇手机，看看吃什么吧</string>
    <string name="eat_sure">就它了</string>
    <string name="add_item">先添加你想吃的菜品吧</string>
    <string name="delete">删除</string>
    <string name="all_chose">全选</string>
    <string name="finish">完成</string>
    <string name="add">添加</string>
    <string name="please_input_name">请输入菜品/商家名称</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
</resources>
