<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_main_add_layout_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_add_layout_height"
        android:background="@color/text_shake_tips"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_main_text_margin_left"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_main_text_size" />

        <ImageView
            android:id="@+id/activity_main_add_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_main_text_margin_left"
            android:src="@mipmap/add" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_main_choose_layout_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_add_layout_height"
        android:background="@color/text_shake_tips"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/activity_main_choose_finish_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_main_text_margin_left"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_main_text_size" />

        <TextView
            android:id="@+id/activity_main_choose_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_main_count_text_size" />

        <TextView
            android:id="@+id/activity_main_choose_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_main_text_margin_left"
            android:gravity="center"
            android:text="@string/all_chose"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_main_text_size" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/activity_main_none_layout_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_main_image_margin_top"
            android:src="@mipmap/none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_main_text_margin_top"
            android:text="@string/add_item"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/activity_main_text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/activity_main_shake_tips_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_tips_height"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/shake_tips"
        android:textColor="@color/text_shake_tips"
        android:textSize="@dimen/activity_main_tips_text_size"
        android:visibility="visible" />

    <GridView
        android:id="@+id/activity_main_menu_gl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_main_text_margin_left"
        android:layout_marginLeft="@dimen/activity_main_text_margin_left"
        android:layout_marginRight="@dimen/activity_main_text_margin_left"
        android:layout_marginTop="@dimen/activity_main_text_margin_left"
        android:layout_weight="1"
        android:horizontalSpacing="@dimen/activity_main_text_margin_left"
        android:numColumns="2"
        android:verticalSpacing="@dimen/activity_main_text_margin_left"
        android:visibility="visible" />

    <TextView
        android:id="@+id/activity_main_delete_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_delete_height"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/activity_main_result_layout_fl"
        android:layout_width="@dimen/activity_main_result_width"
        android:layout_height="@dimen/activity_main_result_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_main_result_margin_top"
        android:visibility="gone">

        <ImageView
            android:id="@+id/activity_main_result_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/result" />

        <TextView
            android:id="@+id/activity_main_result_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_main_text_size"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:id="@+id/activity_main_sure_tv"
        android:layout_width="@dimen/activity_main_sure_width"
        android:layout_height="@dimen/activity_main_text_margin_top"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_main_tips_height"
        android:background="@drawable/eat_sure_bg"
        android:gravity="center"
        android:text="@string/eat_sure"
        android:textColor="@color/text_shake_tips"
        android:textSize="@dimen/activity_main_tips_text_size"
        android:visibility="gone" />

</LinearLayout>
